schema/testdata/errors/set_attribute_invalid_assignment_condition.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create ctxOnly() with (name, published) {
            //expect-error:18:21:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(ctx)
        }
        create literalOnly() with (name, published) {
            //expect-error:18:25:AttributeExpressionError:the @set attribute must be an assignment expression
            @set("hello")
        }
        create trueOnly() with (name, published) {
            //expect-error:18:22:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(true)
        }
        create fieldOnly() with (name) {
            //expect-error:18:32:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.published)
        }
        create equality() with (name) {
            //expect-error:18:40:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.published == true)
        }
        create multipleConditions() {
            //expect-error:35:62:AttributeExpressionError:assignment operator '=' not valid - did you mean to use the comparison operator '=='?
            @set(post.published = true && post.name = "hello")
        }
    }
}
